--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
-    background: var(--brown);
+    background: var(--light-brown);
     border-right: 5rem;
 }
 
@@ -66,7 +66,7 @@ section {
     text-transform: uppercase;
 }
 
-.btn {
+.button {
     margin-top: 1rem;
     display: inline-block;
     padding: .9rem 3rem;
@@ -74,11 +74,46 @@ section {
     color: #ffffff;
     background: var(--light-brown);
     cursor: pointer;
+    border-radius: .5rem;
 }
 
-.btn:hover{
+.button:hover{
     letter-spacing: .2rem;
 }
+
+.btn{
+    display: inline-block;
+    padding:.8rem 3rem;
+    border:.2rem solid var(--light-brown);
+    color:var(--light-brown);
+    cursor: pointer;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 1rem;
+  }
+  
+  .btn::before{
+    content: '';
+    position: absolute;
+    top:0; right: 0;
+    width:0;
+    height:100%;
+    background:var(--light-brown);
+    transition: .3s linear;
+    z-index: -1;
+  }
+  
+  .btn:hover::before{
+    width:100%;
+    left: 0;
+  }
+  
+  .btn:hover{
+    color:#fff;
+  }
 
 header {
     background: var(--bg);
@@ -108,7 +143,7 @@ header .logo a{
 
 
 header .logo:hover {
-    color: var(--black-3);
+    color: var(--brown);
     font-weight: bold;
 }
 
@@ -119,14 +154,14 @@ header .logo span {
 }
 
 header .logo h3 {
-    font-size: 1rem;
-    color: #fff;
+    font-size: 1.2rem;
+    color: var(--black-3);
     text-transform: uppercase;
 }
 
 header .navbar a {
     margin: 0 1rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: var(--brown);
     padding: .5rem 1.5rem;
 }
@@ -201,18 +236,18 @@ header .icons #menu-bar {
 }
 
 .home .content h3 {
-    font-size: 6rem;
+    font-size: 5rem;
     text-transform: capitalize;
-    color: #fff;
+    color: var(--black-3);
     font-style: italic;
+    margin-top: 8rem;
 }
 
 .home .content p {
-    font-size: 2rem;
-    font-weight: 400;
+    font-size: 2.5rem;
     line-height: 1.8;
-    padding: 1rem 0;
-    color: var(--black-3);
+    padding: 1.5rem 0;
+    color: var(--white);
     text-transform: none;
 
 }
@@ -333,40 +368,31 @@ header .icons #menu-bar {
 .causes .box-container{
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap:1.5rem;
   }
   
   .causes .box-container .box{
-    flex: 1 1 30rem;
-    position: relative;
-    overflow: hidden;
+    padding:2rem;
+    background:#fff;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
     border:.1rem solid rgba(0,0,0,.3);
-    cursor: pointer;
-
-  }
-  
-  .causes .box-container .box .image{
-    height:100%;
-    width:100%;
-    object-fit: cover;
-    position: absolute;
-    top: -100%; left:0;
-  }
-  
-  .causes .box-container .box .content{
+    border-radius: .5rem;
     text-align: center;
-    background:#fff;
-    padding:2rem;
+    flex:1 1 30rem;
+    position: relative;
   }
   
-  .causes .box-container .box .content img{
-    margin:1.5rem 0;
+  .causes .box-container .box img{
+    height:25rem;
+    object-fit: cover;
+    width:100%;
+    border-radius: .5rem;
   }
   
   .causes .box-container .box .content h3{
     font-size: 2.5rem;
     color: var(--light-brown);
+    padding-top: 1rem;
   }
   
   .causes .box-container .box .content p{
@@ -375,14 +401,6 @@ header .icons #menu-bar {
     padding: 1rem 0;
     text-transform: none;
 
-  }
-  
-  .causes .box-container .box:hover .image{
-    top:0;
-  }
-  
-  .causes .box-container .box:hover .content{
-    transform: translateY(100%);
   }
 
   .volunteers .box-container{
@@ -424,14 +442,15 @@ header .icons #menu-bar {
   }
   
   .volunteers .box-container .share a {
-    width: 5rem;
-    height: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    font-size: 1.5rem;
     color: #ffffff;
     border: var(--border);
     margin: .3rem;
     border-radius: 50%;
+    align-content: center;
 }
 
 .volunteers .box-container .share a:hover {
@@ -490,6 +509,103 @@ header .icons #menu-bar {
     font-size: 1.5rem ;
     line-height: 1.8;
     color: var(--brown);
+    text-transform: none;
+}
+
+.blog .box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blog .box-container .box {
+    flex: 1 1 30rem;
+    width: 100%;
+    height: 100%;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    transition: all ease 0.3s;
+}
+
+.blog .box-container .box .image {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    overflow: hidden;
+    display: flex;
+    position: relative;
+}
+
+.blog .box-container .box .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all ease 0.3s;
+}
+
+.blog .box-container .box .image .link {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    color: var(--brown);
+    animation: fade 0.3s;
+}
+
+.blog .box-container .box:hover .image a {
+    display: flex;
+}
+
+.blog .box-container .box:hover .image img {
+    filter: blur(3px);
+} 
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+    
+}
+
+.blog .box-container .box .text h3 {
+    font-size: 1.4rem;
+    color: var(--light-brown);
+    padding: 1rem 0;
+    text-transform: none;
+}
+
+.blog .box-container .box .text p {
+    font-size: 1.8rem;
+    color: var(--black-3);
+    text-transform: none;
+    line-height: 1.2;
+}
+
+.blog .box-container .box .text .icons span {
+    display: inline-block;
+    padding: 1rem 0;
+    font-size: 1.2rem;
+}
+
+.blog .box-container .box .text .icons span i {
+    color: var(--light-brown);
+    padding-right: .5rem;
+}
+
+.blog .box-container .box .text .btn i {
+    padding-left: 1rem;
 }
 
 
@@ -551,18 +667,22 @@ header .icons #menu-bar {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+#scroll-top{
+    position: fixed;
+    top:-120%;
+    right:2rem;
+    padding:.5rem 1.5rem;
+    font-size: 4rem;
+    background:var(--light-brown);
+    color:#fff;
+    border-radius: .5rem;
+    transition: 1s linear;
+    z-index: 1000;
+  }
+  
+  #scroll-top.active{
+    top:calc(100% - 12rem)
+  }
 
 
 
